# ED_AI_Coder_Kanban_App

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  docker-compose.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: main.py
backend/static/: index.html
backend/tests/: test_health.py
docs/: PLAN.md
frontend/: AGENTS.md
frontend/src/app/: layout.tsx
frontend/src/components/: KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  NewCardForm.tsx
frontend/src/lib/: kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh
